[tool.poetry]
name = "pypkgs"
version = "0.1.1"
description = "Python package that eases the pain of concatenating Pandas categoricals!"
authors = ["Tomas Beuzen <tomas.beuzen@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = 'https://pybeach.readthedocs.io'
homepage = "https://github.com/TomasBeuzen/pypkgs"
repository = "https://github.com/TomasBeuzen/pypkgs"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
sphinx = "^3.1.2"
sphinxcontrib-napoleon = "^0.7"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
flake8 = "^3.8.3"
python-semantic-release = "^7.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
version_variable = "pypkgs/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
